--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="shortcut icon" href="./multimedia/img/noun-fossil-3159389.svg" type="image/x-icon">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -47,152 +48,164 @@
 
     </div>
     <main>
-        <div class="carrusel-de-productos">
+        <div class="carrusel-de-productos container px-0">
             <h2 class="titulo-de-secciones">ESPECIALES</h2>
             <div class="contenedor-de-tarjetas">
-                <div class="tarjeta-de-producto">
-                    <div class="imagen-principal-tarjeta">
-                        <img src="./multimedia/img/imagen de la tarjeta.webp">
+                <div class="col-12 col-md-3 p-2">
+                    <div class="tarjeta-de-producto">
+                        <div class="imagen-principal-tarjeta">
+                            <img src="./multimedia/img/imagen de la tarjeta.webp">
+                        </div>
+                        <div>
+                            <p class="titulo-principal-tarjeta mb-0">Cafe frutos del bosque</p>
+                            <p class="texto-tarjeta mb-0">Cafe de especialidad afrutado</p>
+                            <p class="texto-tarjeta mb-0">Origen: Colombia</p>
+                            <p class="texto-tarjeta mb-0">500gr</p>
+                        </div>
+                        <div class="chip-contenedor">
+                            <button class="chip-cesta-compra">Añadir a la cesta</button>
+                        </div>
                     </div>
-                    <div>
-                        <p class="titulo-principal-tarjeta">Cafe frutos del bosque</p>
-                        <p class="texto-tarjeta">Cafe de especialidad afrutado</p>
-                        <p class="texto-tarjeta">Origen: Colombia</p>
-                        <p class="texto-tarjeta">500gr</p>
+                </div>
+                <div class="col-12 col-md-3 p-2">
+                    <div class="tarjeta-de-producto">
+                        <div class="imagen-principal-tarjeta">
+                            <img src="./multimedia/img/imagen de la tarjeta.webp">
+                        </div>
+                        <div>
+                            <p class="titulo-principal-tarjeta mb-0">Cafe frutos del bosque</p>
+                            <p class="texto-tarjeta mb-0">Cafe de especialidad afrutado</p>
+                            <p class="texto-tarjeta mb-0">Origen: Colombia</p>
+                            <p class="texto-tarjeta mb-0">500gr</p>
+                        </div>
+                        <div class="chip-contenedor">
+                            <button class="chip-cesta-compra">Añadir a la cesta</button>
+                        </div>
                     </div>
-                    <div class="chip-contenedor">
-                        <button class="chip-cesta-compra">Añadir a la cesta</button>
+                </div>
+                <div class="col-12 col-md-3 p-2">
+                    <div class="tarjeta-de-producto">
+                        <div class="imagen-principal-tarjeta">
+                            <img src="./multimedia/img/imagen de la tarjeta.webp">
+                        </div>
+                        <div>
+                            <p class="titulo-principal-tarjeta mb-0">Cafe frutos del bosque</p>
+                            <p class="texto-tarjeta mb-0">Cafe de especialidad afrutado</p>
+                            <p class="texto-tarjeta mb-0">Origen: Colombia</p>
+                            <p class="texto-tarjeta mb-0">500gr</p>
+                        </div>
+                        <div class="chip-contenedor">
+                            <button class="chip-cesta-compra">Añadir a la cesta</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-3 p-2">
+                    <div class="tarjeta-de-producto">
+                        <div class="imagen-principal-tarjeta">
+                            <img src="./multimedia/img/imagen de la tarjeta.webp">
+                        </div>
+                        <div>
+                            <p class="titulo-principal-tarjeta mb-0">Cafe frutos del bosque</p>
+                            <p class="texto-tarjeta mb-0">Cafe de especialidad afrutado</p>
+                            <p class="texto-tarjeta mb-0">Origen: Colombia</p>
+                            <p class="texto-tarjeta mb-0">500gr</p>
+                        </div>
+                        <div class="chip-contenedor">
+                            <button class="chip-cesta-compra">Añadir a la cesta</button>
+                        </div>
                     </div>
                 </div>
 
-                <div class="tarjeta-de-producto">
-                    <div class="imagen-principal-tarjeta">
-                        <img src="./multimedia/img/imagen de la tarjeta.webp">
-                    </div>
-                    <div>
-                        <p class="titulo-principal-tarjeta">Cafe frutos del bosque</p>
-                        <p class="texto-tarjeta">Cafe de especialidad afrutado</p>
-                        <p class="texto-tarjeta">Origen: Colombia</p>
-                        <p class="texto-tarjeta">500gr</p>
-                    </div>
-                    <div class="chip-contenedor">
-                        <button class="chip-cesta-compra">Añadir a la cesta</button>
-                    </div>
-                </div>
-
-                <div class="tarjeta-de-producto">
-                    <div class="imagen-principal-tarjeta">
-                        <img src="./multimedia/img/imagen de la tarjeta.webp">
-                    </div>
-                    <div>
-                        <p class="titulo-principal-tarjeta">Cafe frutos del bosque</p>
-                        <p class="texto-tarjeta">Cafe de especialidad afrutado</p>
-                        <p class="texto-tarjeta">Origen: Colombia</p>
-                        <p class="texto-tarjeta">500gr</p>
-                    </div>
-                    <div class="chip-contenedor">
-                        <button class="chip-cesta-compra">Añadir a la cesta</button>
-                    </div>
-                </div>
-                <div class="tarjeta-de-producto">
-                    <div class="imagen-principal-tarjeta">
-                        <img src="./multimedia/img/imagen de la tarjeta.webp">
-                    </div>
-                    <div>
-                        <p class="titulo-principal-tarjeta">Cafe frutos del bosque</p>
-                        <p class="texto-tarjeta">Cafe de especialidad afrutado</p>
-                        <p class="texto-tarjeta">Origen: Colombia</p>
-                        <p class="texto-tarjeta">500gr</p>
-                    </div>
-                    <div class="chip-contenedor">
-                        <button class="chip-cesta-compra">Añadir a la cesta</button>
-                    </div>
-                </div>
                 <hr class="linea-horizontal-secciones">
             </div>
         </div>
 
-        <div class="carrusel-video-recetas">
+        <div class="carrusel-video-recetas container px-0">
             <h2 class="titulo-de-secciones">RECETAS</h2>
             <div class="contenedor-tarjetas-recetas">
-                <div class="tarjeta-de-receta">
-                    <div class="imagen-tarjeta-recetas">
-                        <img src="./multimedia/img/pexels-oleksandr-pidvalnyi-12955822.jpg" alt="">
-                        <p class="titulo-principal-tarjeta">Tarta de cafe</p>
-                    </div>
-                    <div class="contenedor-nivel-de-dificultad-recetas">
-                        <p class="texto-tarjeta-2">Dificultad:</p>
-                        <div class="imagen-nivel-de-receta">
-                            <img src="./multimedia/img/grano de cafe.svg" alt="">
+                <div class=" col-12 col-md-4 p-2 ">
+                    <div class="tarjeta-de-receta ">
+                        <div class="imagen-tarjeta-recetas">
+                            <img src="./multimedia/img/pexels-oleksandr-pidvalnyi-12955822.jpg" alt="">
+                            <p class="titulo-principal-tarjeta-recetas mb-0">Tarta de cafe</p>
                         </div>
-                        <div class="imagen-nivel-de-receta">
-                            <img src="./multimedia/img/grano de cafe.svg" alt="">
-                        </div>
-                        <div class="imagen-nivel-de-receta">
-                            <img src="./multimedia/img/grano de cafe.svg" alt="">
-                        </div>
-                        <div class="imagen-nivel-de-receta">
-                            <img src="./multimedia/img/grano de cafe.svg" alt="">
-                        </div>
-                        <div class="imagen-nivel-de-receta">
-                            <img src="./multimedia/img/grano de cafe.svg" alt="">
-                        </div>
-                        <div class="imagen-nivel-de-receta">
-                            <img src="./multimedia/img/grano de cafe.svg" alt="">
-                        </div>
-                    </div>
-                </div>
-                <div class="tarjeta-de-receta">
-                    <div class="imagen-tarjeta-recetas">
-                        <img src="./multimedia/img/pexels-oleksandr-pidvalnyi-12955822.jpg" alt="">
-                        <p class="titulo-principal-tarjeta">Tarta de cafe</p>
-                    </div>
-                    <div class="contenedor-nivel-de-dificultad-recetas">
-                        <p class="texto-tarjeta-2">Dificultad:</p>
-                        <div class="imagen-nivel-de-receta">
-                            <img src="./multimedia/img/grano de cafe.svg" alt="">
-                        </div>
-                        <div class="imagen-nivel-de-receta">
-                            <img src="./multimedia/img/grano de cafe.svg" alt="">
-                        </div>
-                        <div class="imagen-nivel-de-receta">
-                            <img src="./multimedia/img/grano de cafe.svg" alt="">
-                        </div>
-                        <div class="imagen-nivel-de-receta">
-                            <img src="./multimedia/img/grano de cafe.svg" alt="">
-                        </div>
-                        <div class="imagen-nivel-de-receta">
-                            <img src="./multimedia/img/grano de cafe.svg" alt="">
-                        </div>
-                        <div class="imagen-nivel-de-receta">
-                            <img src="./multimedia/img/grano de cafe.svg" alt="">
+                        <div class="contenedor-nivel-de-dificultad-recetas">
+                            <p class="texto-tarjeta-2 mb-0">Dificultad:</p>
+                            <div class="imagen-nivel-de-receta">
+                                <img src="./multimedia/img/grano de cafe.svg" alt="">
+                            </div>
+                            <div class="imagen-nivel-de-receta">
+                                <img src="./multimedia/img/grano de cafe.svg" alt="">
+                            </div>
+                            <div class="imagen-nivel-de-receta">
+                                <img src="./multimedia/img/grano de cafe.svg" alt="">
+                            </div>
+                            <div class="imagen-nivel-de-receta">
+                                <img src="./multimedia/img/grano de cafe.svg" alt="">
+                            </div>
+                            <div class="imagen-nivel-de-receta">
+                                <img src="./multimedia/img/grano de cafe.svg" alt="">
+                            </div>
+                            <div class="imagen-nivel-de-receta">
+                                <img src="./multimedia/img/grano de cafe.svg" alt="">
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="tarjeta-de-receta">
-                    <div class="imagen-tarjeta-recetas">
-                        <img src="./multimedia/img/pexels-oleksandr-pidvalnyi-12955822.jpg" alt="">
-                        <p class="titulo-principal-tarjeta">Tarta de cafe</p>
+                <div class=" col-12 col-md-4 p-2 ">
+                    <div class="tarjeta-de-receta ">
+                        <div class="imagen-tarjeta-recetas ">
+                            <img src="./multimedia/img/pexels-oleksandr-pidvalnyi-12955822.jpg" alt="">
+                            <p class="titulo-principal-tarjeta-recetas mb-0">Tarta de cafe</p>
+                        </div>
+                        <div class="contenedor-nivel-de-dificultad-recetas">
+                            <p class="texto-tarjeta-2 mb-0">Dificultad:</p>
+                            <div class="imagen-nivel-de-receta">
+                                <img src="./multimedia/img/grano de cafe.svg" alt="">
+                            </div>
+                            <div class="imagen-nivel-de-receta">
+                                <img src="./multimedia/img/grano de cafe.svg" alt="">
+                            </div>
+                            <div class="imagen-nivel-de-receta">
+                                <img src="./multimedia/img/grano de cafe.svg" alt="">
+                            </div>
+                            <div class="imagen-nivel-de-receta">
+                                <img src="./multimedia/img/grano de cafe.svg" alt="">
+                            </div>
+                            <div class="imagen-nivel-de-receta">
+                                <img src="./multimedia/img/grano de cafe.svg" alt="">
+                            </div>
+                            <div class="imagen-nivel-de-receta">
+                                <img src="./multimedia/img/grano de cafe.svg" alt="">
+                            </div>
+                        </div>
                     </div>
-                    <div class="contenedor-nivel-de-dificultad-recetas">
-                        <p class="texto-tarjeta-2">Dificultad:</p>
-                        <div class="imagen-nivel-de-receta">
-                            <img src="./multimedia/img/grano de cafe.svg" alt="">
+                </div><div class=" col-12 col-md-4 p-2 ">
+                    <div class="tarjeta-de-receta">
+                        <div class="imagen-tarjeta-recetas">
+                            <img src="./multimedia/img/pexels-oleksandr-pidvalnyi-12955822.jpg" alt="">
+                            <p class="titulo-principal-tarjeta-recetas mb-0">Tarta de cafe</p>
                         </div>
-                        <div class="imagen-nivel-de-receta">
-                            <img src="./multimedia/img/grano de cafe.svg" alt="">
-                        </div>
-                        <div class="imagen-nivel-de-receta">
-                            <img src="./multimedia/img/grano de cafe.svg" alt="">
-                        </div>
-                        <div class="imagen-nivel-de-receta">
-                            <img src="./multimedia/img/grano de cafe.svg" alt="">
-                        </div>
-                        <div class="imagen-nivel-de-receta">
-                            <img src="./multimedia/img/grano de cafe.svg" alt="">
-                        </div>
-                        <div class="imagen-nivel-de-receta">
-                            <img src="./multimedia/img/grano de cafe.svg" alt="">
+                        <div class="contenedor-nivel-de-dificultad-recetas">
+                            <p class="texto-tarjeta-2 mb-0">Dificultad:</p>
+                            <div class="imagen-nivel-de-receta">
+                                <img src="./multimedia/img/grano de cafe.svg" alt="">
+                            </div>
+                            <div class="imagen-nivel-de-receta">
+                                <img src="./multimedia/img/grano de cafe.svg" alt="">
+                            </div>
+                            <div class="imagen-nivel-de-receta">
+                                <img src="./multimedia/img/grano de cafe.svg" alt="">
+                            </div>
+                            <div class="imagen-nivel-de-receta">
+                                <img src="./multimedia/img/grano de cafe.svg" alt="">
+                            </div>
+                            <div class="imagen-nivel-de-receta">
+                                <img src="./multimedia/img/grano de cafe.svg" alt="">
+                            </div>
+                            <div class="imagen-nivel-de-receta">
+                                <img src="./multimedia/img/grano de cafe.svg" alt="">
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -204,7 +217,9 @@
             <p class="texto-del-footer"> escribe un correo con tus dudas</p>
         </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/7f1bf24119.js" crossorigin="anonymous"></script>
 </body>
 
