--- a/pages/trabajaconnosotros.html
+++ b/pages/trabajaconnosotros.html
@@ -48,25 +48,24 @@
                 </div>
             </nav>
         </div>
+        <div  class="banner-buscar-trabajo container">
+            <div class="titulo-banner-trabajo">
+                <h2>Encuentra más que un trabajo</h2>
+            </div>
+            <select class="form-select" aria-label="Default select example">
+                <option selected>Puestos</option>
+                <option value="1">One</option>
+                <option value="2">Two</option>
+                <option value="3">Three</option>
+            </select>
+            <select class="form-select" aria-label="Default select example">
+                <option selected>Ciudades</option>
+                <option value="1">One</option>
+                <option value="2">Two</option>
+                <option value="3">Three</option>
+            </select>
+        </div>
     </header>
-<div  class="banner-buscar-trabajo">
-    <div class="titulo-banner-empleo">
-        <h2>Encuentra más que un trabajo</h2>
-    </div>
-    <div></div>
-    <select class="form-select" aria-label="Default select example">
-        <option selected>Puestos</option>
-        <option value="1">One</option>
-        <option value="2">Two</option>
-        <option value="3">Three</option>
-      </select>
-      <select class="form-select" aria-label="Default select example">
-        <option selected>Ciudades</option>
-        <option value="1">One</option>
-        <option value="2">Two</option>
-        <option value="3">Three</option>
-      </select>
-</div>
     <main>
         <form action="" method="get">
             <div>
