--- a/pages/trabajaconnosotros.html
+++ b/pages/trabajaconnosotros.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="shortcut icon" href="./multimedia/img/noun-fossil-3159389.svg" type="image/x-icon">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,6 +19,7 @@
 
 <body>
     <header>
+
         <div class="navegador-paginas">
             <div class="logo-principal-blanco">
                 <a href="../index.html" alt="volver al inicio"><img src="../multimedia/img/logo_kofe_blanco.svg"></a>
@@ -48,66 +50,129 @@
                 </div>
             </nav>
         </div>
-        <div  class="banner-buscar-trabajo container">
-            <div class="titulo-banner-trabajo">
-                <h2>Encuentra más que un trabajo</h2>
-            </div>
-            <select class="form-select" aria-label="Default select example">
-                <option selected>Puestos</option>
-                <option value="1">One</option>
-                <option value="2">Two</option>
-                <option value="3">Three</option>
-            </select>
-            <select class="form-select" aria-label="Default select example">
-                <option selected>Ciudades</option>
-                <option value="1">One</option>
-                <option value="2">Two</option>
-                <option value="3">Three</option>
-            </select>
-        </div>
     </header>
     <main>
-        <form action="" method="get">
-            <div>
-
+        <div class="banner-busca-empleo">
+            <div class="banner-buscar-trabajo container">
+                <div class="titulo-banner-trabajo">
+                    <h2>Encuentra más que un trabajo</h2>
+                </div>
+                <div class="selectores-de-trabajo">
+                    <div class="col-12 col-md-5 pr-4">
+                        <select class="form-select" aria-label="Default select example">
+                            <option selected>Puestos</option>
+                            <option value="1">One</option>
+                            <option value="2">Two</option>
+                            <option value="3">Three</option>
+                        </select>
+                    </div>
+                    <div class="col-12 col-md-5 px-4">
+                        <select class="form-select" aria-label="Default select example">
+                            <option selected>Ciudades</option>
+                            <option value="1">One</option>
+                            <option value="2">Two</option>
+                            <option value="3">Three</option>
+                        </select>
+                    </div>
+                    <div class="col-12 col-md-2 pl-4">
+                        <button type="button" class="btn boton-buscar px-4">Buscar</button>
+                    </div>
+                </div>
             </div>
-            <label>Nombre:
-                <input type="text" name="nombre" placeholder="Nombre" required>
-            </label>
-            <label>Apellido:
-                <input type="text" name="apellido" placeholder="Apellido" required>
-            </label>
-            <label>Ciudad:
-                <input type="text" name="ciudad" placeholder="Ciudad" required>
-            </label>
-            <label>Numero de telefono:
-                <input type="number" name="numero de telefono" placeholder="Telefono" required>
-            </label>
-            <label>Email:
-                <input type="email" name="Mail" placeholder="Correo" required>
-            </label>
-            <br>
-            <br>
-            <textarea name="carta de presentacion" id="" cols="30" rows="10"
-                placeholder="Carta de presentación"></textarea>
-            <br>
-            <br>
-            <input type="button" value="Cargar CV">
-            <br><br>
-            <input type="submit" value="Enviar">
+        </div>
+        <div class="container contenedor-formularios">
+            <div class="col-12 col-md-4">
+                <div class="foto-cv">
+                    <img src="../multimedia/img/imagen de la tarjeta.webp" class="rounded float-start" alt="...">
+                    <button type="button" class="btn btn-boton-subir-foto px-4">Subir foto</button>
+                </div>
+            </div>
+            <div class="col-12 col-md-8">
+                <div class="formularios">
+                    <div class="input-group mb-3">
+                        <span class="input-group-text" id="basic-addon1">Nombre</span>
+                        <input type="text" class="form-control" placeholder="Lomo" aria-label="Username"
+                            aria-describedby="basic-addon1">
+                    </div>
+                    <div class="input-group mb-3">
+                        <span class="input-group-text" id="basic-addon1">Apellido</span>
+                        <input type="text" class="form-control" placeholder="Yotoco" aria-label="Username"
+                            aria-describedby="basic-addon1">
+                    </div>
+                    <div class="input-group mb-3">
+                        <span class="input-group-text" id="basic-addon1">Mail</span>
+                        <input type="text" class="form-control" placeholder="yotocolomodeperro@gmail.com"
+                            aria-label="Username" aria-describedby="basic-addon1">
+                    </div>
+                    <div class="input-group mb-3">
+                        <span class="input-group-text" id="basic-addon1">Numero de teléfono</span>
+                        <input type="text" class="form-control" placeholder="+22 123 345 567" aria-label="Username"
+                            aria-describedby="basic-addon1">
+                    </div>
+                    <div class="input-group">
+                        <span class="input-group-text">Carta de presentación</span>
+                        <textarea class="form-control" aria-label="With textarea"></textarea>
+                    </div>
+                    <hr class="linea-horizontal-formularios">
+                    <div class="contenedor-botones-formulario">
+                        <div class="botones-formulario">
+                            <button type="button" class="btn boton-subir-cv px-4 ">Subir CV</button>
+                        </div>
+                        <div class="botones-formulario">
+                            <button type="button" class="btn boton-enviar px-4">Enviar</button>
+                        </div>
+                    </div>
+                    <!-- <form action="" method="get">
+                        <label>Nombre:
+                            <input type="text" name="nombre" placeholder="Nombre" required>
+                        </label>
+                        <label>Apellido:
+                            <input type="text" name="apellido" placeholder="Apellido" required>
+                        </label>
+                        <label>Ciudad:
+                            <input type="text" name="ciudad" placeholder="Ciudad" required>
+                        </label>
+                        <label>Numero de telefono:
+                            <input type="number" name="numero de telefono" placeholder="Telefono" required>
+                        </label>
+                        <label>Email:
+                            <input type="email" name="Mail" placeholder="Correo" required>
+                        </label>
+                        <br>
+                        <br>
+                        <textarea name="carta de presentacion" id="" cols="30" rows="10"
+                            placeholder="Carta de presentación"></textarea>
+                        <br>
+                        <br>
+                        <input type="button" value="Cargar CV">
+                        <br><br>
+                        <input type="submit" value="Enviar">
+            
+                    </form> -->
+                </div>
+            </div>
+        </div>
+    <div class="container nos-encanta">
+        <h2>
+            Nos encanta lo que hacemos
+        </h2>
+        <p>
+            Somos lo que bebes antes de ir a trabajar, en el break del dia, o en las tardes con tus amigos. El trabajo en equipo, la inquietud, la diversidad, la sostenibilidad y la humildad mueven a nuestras más de 144.000 personas que forman parte del grupo Kofe. 
+        </p>
+    </div>
 
-        </form>
         <aside>
-           
         </aside>
 
     </main>
     <footer>
-        <div>
+        <!-- <div>
             <p class="texto-del-footer"> escribe un correo con tus dudas</p>
-        </div>
+        </div> -->
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/7f1bf24119.js" crossorigin="anonymous"></script>
 
 </body>
