pagina de producto tarjetas

--- a/pages/producto.html
+++ b/pages/producto.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="shortcut icon" href="./multimedia/img/noun-fossil-3159389.svg" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -57,13 +59,181 @@
         <div>
 
         </div>
+        <div class="carrusel-de-productos container px-0">
+            <div class="contenedor-de-tarjetas">
+                <div class="col-12 col-md-3 p-2">
+                    <div class="tarjeta-de-producto">
+                        <div class="imagen-principal-tarjeta">
+                            <img src="../multimedia/img/imagen de la tarjeta.webp">
+                        </div>
+                        <div class="estrellas">
+                            <img src="../multimedia/img/Group 205.png" alt="">
+                        </div>
+                        <div>
+                            <p class="titulo-principal-tarjeta mb-0">Café arabica 100%</p>
+                            <p class="texto-tarjeta mb-0">Cafe molido arabica 100% que combina el mejor café con la fragancia y sabor únicos de la avellana, la vainilla, la canela, el chocolate y el toffee.</p>
+                            <p class="texto-tarjeta-precio mb-0">21,95 €</p>
+                            <p class="texto-tarjeta-iva mb-0">IVA Incluido</p>
+
+                        </div>
+                        <div class="chip-contenedor">
+                            <button class="chip-cesta-compra">Añadir a la cesta</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-3 p-2">
+                    <div class="tarjeta-de-producto">
+                        <div class="imagen-principal-tarjeta">
+                            <img src="../multimedia/img/imagen de la tarjeta.webp">
+                        </div>
+                        <div class="estrellas">
+                            <img src="../multimedia/img/Group 205.png" alt="">
+                        </div>
+                        <div>
+                            <p class="titulo-principal-tarjeta mb-0">Café arabica 100%</p>
+                            <p class="texto-tarjeta mb-0">Cafe molido arabica 100% que combina el mejor café con la fragancia y sabor únicos de la avellana, la vainilla, la canela, el chocolate y el toffee.</p>
+                            <p class="texto-tarjeta-precio mb-0">21,95 €</p>
+                            <p class="texto-tarjeta-iva mb-0">IVA Incluido</p>
+
+                        </div>
+                        <div class="chip-contenedor">
+                            <button class="chip-cesta-compra">Añadir a la cesta</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-3 p-2">
+                    <div class="tarjeta-de-producto">
+                        <div class="imagen-principal-tarjeta">
+                            <img src="../multimedia/img/imagen de la tarjeta.webp">
+                        </div>
+                        <div class="estrellas">
+                            <img src="../multimedia/img/Group 205.png" alt="">
+                        </div>
+                        <div>
+                            <p class="titulo-principal-tarjeta mb-0">Café arabica 100%</p>
+                            <p class="texto-tarjeta mb-0">Cafe molido arabica 100% que combina el mejor café con la fragancia y sabor únicos de la avellana, la vainilla, la canela, el chocolate y el toffee.</p>
+                            <p class="texto-tarjeta-precio mb-0">21,95 €</p>
+                            <p class="texto-tarjeta-iva mb-0">IVA Incluido</p>
+
+                        </div>
+                        <div class="chip-contenedor">
+                            <button class="chip-cesta-compra">Añadir a la cesta</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-3 p-2">
+                    <div class="tarjeta-de-producto">
+                        <div class="imagen-principal-tarjeta">
+                            <img src="../multimedia/img/imagen de la tarjeta.webp">
+                        </div>
+                        <div class="estrellas">
+                            <img src="../multimedia/img/Group 205.png" alt="">
+                        </div>
+                        <div>
+                            <p class="titulo-principal-tarjeta mb-0">Café arabica 100%</p>
+                            <p class="texto-tarjeta mb-0">Cafe molido arabica 100% que combina el mejor café con la fragancia y sabor únicos de la avellana, la vainilla, la canela, el chocolate y el toffee.</p>
+                            <p class="texto-tarjeta-precio mb-0">21,95 €</p>
+                            <p class="texto-tarjeta-iva mb-0">IVA Incluido</p>
+
+                        </div>
+                        <div class="chip-contenedor">
+                            <button class="chip-cesta-compra">Añadir a la cesta</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-3 p-2">
+                    <div class="tarjeta-de-producto">
+                        <div class="imagen-principal-tarjeta">
+                            <img src="../multimedia/img/imagen de la tarjeta.webp">
+                        </div>
+                        <div class="estrellas">
+                            <img src="../multimedia/img/Group 205.png" alt="">
+                        </div>
+                        <div>
+                            <p class="titulo-principal-tarjeta mb-0">Café arabica 100%</p>
+                            <p class="texto-tarjeta mb-0">Cafe molido arabica 100% que combina el mejor café con la fragancia y sabor únicos de la avellana, la vainilla, la canela, el chocolate y el toffee.</p>
+                            <p class="texto-tarjeta-precio mb-0">21,95 €</p>
+                            <p class="texto-tarjeta-iva mb-0">IVA Incluido</p>
+
+                        </div>
+                        <div class="chip-contenedor">
+                            <button class="chip-cesta-compra">Añadir a la cesta</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-3 p-2">
+                    <div class="tarjeta-de-producto">
+                        <div class="imagen-principal-tarjeta">
+                            <img src="../multimedia/img/imagen de la tarjeta.webp">
+                        </div>
+                        <div class="estrellas">
+                            <img src="../multimedia/img/Group 205.png" alt="">
+                        </div>
+                        <div>
+                            <p class="titulo-principal-tarjeta mb-0">Café arabica 100%</p>
+                            <p class="texto-tarjeta mb-0">Cafe molido arabica 100% que combina el mejor café con la fragancia y sabor únicos de la avellana, la vainilla, la canela, el chocolate y el toffee.</p>
+                            <p class="texto-tarjeta-precio mb-0">21,95 €</p>
+                            <p class="texto-tarjeta-iva mb-0">IVA Incluido</p>
+
+                        </div>
+                        <div class="chip-contenedor">
+                            <button class="chip-cesta-compra">Añadir a la cesta</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-3 p-2">
+                    <div class="tarjeta-de-producto">
+                        <div class="imagen-principal-tarjeta">
+                            <img src="../multimedia/img/cafetera-cecotec.jpg">
+                        </div>
+                        <div class="estrellas">
+                            <img src="../multimedia/img/Group 205.png" alt="">
+                        </div>
+                        <div>
+                            <p class="titulo-principal-tarjeta mb-0">Cecotec Cafetera express</p>
+                            <p class="texto-tarjeta mb-0">Espresso 20 Matic. 850 W, 20 Bares, 1,5L, Brazo Doble Salida, Vaporizador, Superficie Calientatazas, Mandos Digitales, Acabados en Acero Inoxidable.</p>
+                            <p class="texto-tarjeta-precio mb-0">84,90 €</p>
+                            <p class="texto-tarjeta-iva mb-0">IVA Incluido</p>
+
+                        </div>
+                        <div class="chip-contenedor">
+                            <button class="chip-cesta-compra">Añadir a la cesta</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-3 p-2">
+                    <div class="tarjeta-de-producto">
+                        <div class="imagen-principal-tarjeta">
+                            <img src="../multimedia/img/imagen de la tarjeta.webp">
+                        </div>
+                        <div class="estrellas">
+                            <img src="../multimedia/img/Group 205.png" alt="">
+                        </div>
+                        <div>
+                            <p class="titulo-principal-tarjeta mb-0">Café arabica 100%</p>
+                            <p class="texto-tarjeta mb-0">Cafe molido arabica 100% que combina el mejor café con la fragancia y sabor únicos de la avellana, la vainilla, la canela, el chocolate y el toffee.</p>
+                            <p class="texto-tarjeta-precio mb-0">21,95 €</p>
+                            <p class="texto-tarjeta-iva mb-0">IVA Incluido</p>
+
+                        </div>
+                        <div class="chip-contenedor">
+                            <button class="chip-cesta-compra">Añadir a la cesta</button>
+                        </div>
+                    </div>
+                </div>
+                
+            </div>
+        </div>
         <aside></aside>
     </main>
-    <!-- <footer>
+    <footer>
         <div>
             <p class="texto-del-footer"> escribe un correo con tus dudas</p>
         </div>
-    </footer> -->
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/7f1bf24119.js" crossorigin="anonymous"></script>
 
 </body>
