--- a/pages/trabajaconnosotros.html
+++ b/pages/trabajaconnosotros.html
@@ -153,10 +153,10 @@
             </div>
         </div>
     <div class="container nos-encanta">
-        <h2>
+        <h1 class="titulo-trabajo col-md-4 ">
             Nos encanta lo que hacemos
-        </h2>
-        <p>
+        </h1>
+        <p class=" texto-trabajo col-md-8">
             Somos lo que bebes antes de ir a trabajar, en el break del dia, o en las tardes con tus amigos. El trabajo en equipo, la inquietud, la diversidad, la sostenibilidad y la humildad mueven a nuestras más de 144.000 personas que forman parte del grupo Kofe. 
         </p>
     </div>
