cositas de maquetacion

--- a/pages/producto.html
+++ b/pages/producto.html
@@ -154,7 +154,6 @@
                             <p class="texto-tarjeta mb-0">Cafe molido arabica 100% que combina el mejor café con la fragancia y sabor únicos de la avellana, la vainilla, la canela, el chocolate y el toffee.</p>
                             <p class="texto-tarjeta-precio mb-0">21,95 €</p>
                             <p class="texto-tarjeta-iva mb-0">IVA Incluido</p>
-
                         </div>
                         <div class="chip-contenedor">
                             <button class="chip-cesta-compra">Añadir a la cesta</button>
@@ -174,7 +173,6 @@
                             <p class="texto-tarjeta mb-0">Cafe molido arabica 100% que combina el mejor café con la fragancia y sabor únicos de la avellana, la vainilla, la canela, el chocolate y el toffee.</p>
                             <p class="texto-tarjeta-precio mb-0">21,95 €</p>
                             <p class="texto-tarjeta-iva mb-0">IVA Incluido</p>
-
                         </div>
                         <div class="chip-contenedor">
                             <button class="chip-cesta-compra">Añadir a la cesta</button>
@@ -191,7 +189,8 @@
                         </div>
                         <div>
                             <p class="titulo-principal-tarjeta mb-0">Cecotec Cafetera express</p>
-                            <p class="texto-tarjeta mb-0">Espresso 20 Matic. 850 W, 20 Bares, 1,5L, Brazo Doble Salida, Vaporizador, Superficie Calientatazas, Mandos Digitales, Acabados en Acero Inoxidable.</p>
+                            <p class="texto-tarjeta mb-0">Espresso 20 Matic. 850 W, 20 Bares, 1,5L, Brazo Doble Salida, Vaporizador...</p>
+                            <button type="button" class="btn btn-link">Saber mas...</button>
                             <p class="texto-tarjeta-precio mb-0">84,90 €</p>
                             <p class="texto-tarjeta-iva mb-0">IVA Incluido</p>
 
@@ -211,7 +210,7 @@
                         </div>
                         <div>
                             <p class="titulo-principal-tarjeta mb-0">Café arabica 100%</p>
-                            <p class="texto-tarjeta mb-0">Cafe molido arabica 100% que combina el mejor café con la fragancia y sabor únicos de la avellana, la vainilla, la canela, el chocolate y el toffee.</p>
+                            <p class="texto-tarjeta mb-0 text-wrap">Cafe molido arabica 100% que combina el mejor café con la fragancia y sabor únicos de la avellana, la vainilla, la canela, el chocolate y el toffee.</p>
                             <p class="texto-tarjeta-precio mb-0">21,95 €</p>
                             <p class="texto-tarjeta-iva mb-0">IVA Incluido</p>
 
@@ -228,7 +227,7 @@
     </main>
     <footer>
         <div>
-            <p class="texto-del-footer"> escribe un correo con tus dudas</p>
+            <!-- <p class="texto-del-footer"> escribe un correo con tus dudas</p> -->
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
