edicion de menu hamburguesa y navbar

--- a/pages/producto.html
+++ b/pages/producto.html
@@ -23,55 +23,63 @@
             <div class="logo-principal-blanco">
                 <a href="../index.html" alt="volver al inicio"><img src="../multimedia/img/logo_kofe_blanco.svg"></a>
             </div>
-            <nav class="contenedor-nav-paginas">
-                <div class="iconos-del-nav">
-                    <div class="contendor-iconos-nav">
-                            <button class="boton-icono-nav">
-                                <img src="../multimedia/img/🦆 icon _search_.svg" alt="">
-                            </button>
-                            <button class="boton-icono-nav">
-                                <img src="../multimedia/img/🦆 icon _person_.svg" alt="">
-                            </button>
-                            <button class="boton-icono-nav">
-                                <img src="../multimedia/img/🦆 icon _shopping cart_.svg" alt="">
-                            </button>
-                    </div>
-                </div>
-                <div class="ul-contenedor">
-                    <i class="icon-menu-paginas fa-solid fa-bars"></i>
-                    <ul class="nav-lista">
-                        <!-- <li><a href="../index.html">Inicio</a></li>
-                                <li><a href="./Info.html">Info</a></li>
-                                <li><a href="./producto.html">Productos</a></li> -->
-                        <li><a href="./sobrenosotros.html">Sobre nosotros</a></li>
-                        <li><a href="./trabajaconnosotros.html" target="_blank">Trabaja con nosotros</a></li>
+            <nav class="contenedor-nav-paginas col-12 col-md-4">
+                <div class="dropdown menu-ham-paginas">
+                    <button class="btn btn-secondary dropdown-item menu-ham" type="button" data-bs-toggle="dropdown"
+                        aria-expanded="false"> <i class="icon-menu-paginas fa-solid fa-bars"></i>
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="./producto.html">Productos</a></li>
+                        <li><a class="dropdown-item" href="./trabajaconnosotros.html">Empleo</a></li>
+                        <li><a class="dropdown-item" href="./sobrenosotros.html">Nosotros</a></li>
                     </ul>
+                </div>
+                <div class="ul-contenedor col-12 col-md-auto">
+                    <ul class="nav-lista">
+                        <li><a href="../index.html">Inicio</a></li>
+                        <li><a href="./Info.html">Info</a></li>
+                        <li><a href="./producto.html">Productos</a></li>
+                        <li><a href="./sobrenosotros.html">Nosotros</a></li>
+                        <li><a href="./trabajaconnosotros.html" target="_blank">Empleo</a></li>
+                    </ul>
+                </div>
+                <div class="iconos-del-nav col-12 col-md-4">
+                    <div class="contendor-iconos-nav">
+                        <button class="boton-icono-nav">
+                            <img src="../multimedia/img/🦆 icon _search_.svg" alt="">
+                        </button>
+                        <button class="boton-icono-nav">
+                            <img src="../multimedia/img/🦆 icon _person_.svg" alt="">
+                        </button>
+                        <button class="boton-icono-nav">
+                            <img src="../multimedia/img/🦆 icon _shopping cart_.svg" alt="">
+                        </button>
+                    </div>
                 </div>
             </nav>
         </div>
     </header>
-
     <div class="banner-rebajas">
         <p>Envios gratis a partir de 30€ de pedido</p>
     </div>
 
-    <main>
-        <div>
 
-        </div>
+    <main>
         <div class="carrusel-de-productos container px-0">
             <div class="contenedor-de-tarjetas">
-                <div class="col-12 col-md-3 p-2">
-                    <div class="tarjeta-de-producto">
+                <div class=" col-12 col-md-3 p-2">
+                    <div class="tarjeta-de-producto mx-auto">
                         <div class="imagen-principal-tarjeta">
-                            <img src="../multimedia/img/imagen de la tarjeta.webp">
+                            <img src="../multimedia/img/pexels-oleksandr-pidvalnyi-12955822.jpg">
                         </div>
                         <div class="estrellas">
                             <img src="../multimedia/img/Group 205.png" alt="">
                         </div>
                         <div>
                             <p class="titulo-principal-tarjeta mb-0">Café arabica 100%</p>
-                            <p class="texto-tarjeta mb-0">Cafe molido arabica 100% que combina el mejor café con la fragancia y sabor únicos de la avellana, la vainilla, la canela, el chocolate y el toffee.</p>
+                            <p class="texto-tarjeta mb-0">Cafe molido arabica 100% que combina el mejor café con la
+                                fragancia y sabor únicos de la avellana, la vainilla, la canela, el chocolate y el
+                                toffee.</p>
                             <p class="texto-tarjeta-precio mb-0">21,95 €</p>
                             <p class="texto-tarjeta-iva mb-0">IVA Incluido</p>
 
@@ -81,17 +89,19 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-3 p-2">
-                    <div class="tarjeta-de-producto">
+                <div class=" col-12 col-md-3 p-2">
+                    <div class="tarjeta-de-producto mx-auto">
                         <div class="imagen-principal-tarjeta">
-                            <img src="../multimedia/img/imagen de la tarjeta.webp">
+                            <img src="../multimedia/img/pexels-oleksandr-pidvalnyi-12955822.jpg">
                         </div>
                         <div class="estrellas">
                             <img src="../multimedia/img/Group 205.png" alt="">
                         </div>
                         <div>
                             <p class="titulo-principal-tarjeta mb-0">Café arabica 100%</p>
-                            <p class="texto-tarjeta mb-0">Cafe molido arabica 100% que combina el mejor café con la fragancia y sabor únicos de la avellana, la vainilla, la canela, el chocolate y el toffee.</p>
+                            <p class="texto-tarjeta mb-0">Cafe molido arabica 100% que combina el mejor café con la
+                                fragancia y sabor únicos de la avellana, la vainilla, la canela, el chocolate y el
+                                toffee.</p>
                             <p class="texto-tarjeta-precio mb-0">21,95 €</p>
                             <p class="texto-tarjeta-iva mb-0">IVA Incluido</p>
 
@@ -101,17 +111,19 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-3 p-2">
-                    <div class="tarjeta-de-producto">
+                <div class=" col-12 col-md-3 p-2">
+                    <div class="tarjeta-de-producto mx-auto">
                         <div class="imagen-principal-tarjeta">
-                            <img src="../multimedia/img/imagen de la tarjeta.webp">
+                            <img src="../multimedia/img/pexels-oleksandr-pidvalnyi-12955822.jpg">
                         </div>
                         <div class="estrellas">
                             <img src="../multimedia/img/Group 205.png" alt="">
                         </div>
                         <div>
                             <p class="titulo-principal-tarjeta mb-0">Café arabica 100%</p>
-                            <p class="texto-tarjeta mb-0">Cafe molido arabica 100% que combina el mejor café con la fragancia y sabor únicos de la avellana, la vainilla, la canela, el chocolate y el toffee.</p>
+                            <p class="texto-tarjeta mb-0">Cafe molido arabica 100% que combina el mejor café con la
+                                fragancia y sabor únicos de la avellana, la vainilla, la canela, el chocolate y el
+                                toffee.</p>
                             <p class="texto-tarjeta-precio mb-0">21,95 €</p>
                             <p class="texto-tarjeta-iva mb-0">IVA Incluido</p>
 
@@ -121,17 +133,19 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-3 p-2">
-                    <div class="tarjeta-de-producto">
+                <div class=" col-12 col-md-3 p-2">
+                    <div class="tarjeta-de-producto mx-auto">
                         <div class="imagen-principal-tarjeta">
-                            <img src="../multimedia/img/imagen de la tarjeta.webp">
+                            <img src="../multimedia/img/pexels-oleksandr-pidvalnyi-12955822.jpg">
                         </div>
                         <div class="estrellas">
                             <img src="../multimedia/img/Group 205.png" alt="">
                         </div>
                         <div>
                             <p class="titulo-principal-tarjeta mb-0">Café arabica 100%</p>
-                            <p class="texto-tarjeta mb-0">Cafe molido arabica 100% que combina el mejor café con la fragancia y sabor únicos de la avellana, la vainilla, la canela, el chocolate y el toffee.</p>
+                            <p class="texto-tarjeta mb-0">Cafe molido arabica 100% que combina el mejor café con la
+                                fragancia y sabor únicos de la avellana, la vainilla, la canela, el chocolate y el
+                                toffee.</p>
                             <p class="texto-tarjeta-precio mb-0">21,95 €</p>
                             <p class="texto-tarjeta-iva mb-0">IVA Incluido</p>
 
@@ -141,76 +155,19 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-3 p-2">
-                    <div class="tarjeta-de-producto">
+                <div class=" col-12 col-md-3 p-2">
+                    <div class="tarjeta-de-producto mx-auto">
                         <div class="imagen-principal-tarjeta">
-                            <img src="../multimedia/img/imagen de la tarjeta.webp">
+                            <img src="../multimedia/img/pexels-oleksandr-pidvalnyi-12955822.jpg">
                         </div>
                         <div class="estrellas">
                             <img src="../multimedia/img/Group 205.png" alt="">
                         </div>
                         <div>
                             <p class="titulo-principal-tarjeta mb-0">Café arabica 100%</p>
-                            <p class="texto-tarjeta mb-0">Cafe molido arabica 100% que combina el mejor café con la fragancia y sabor únicos de la avellana, la vainilla, la canela, el chocolate y el toffee.</p>
-                            <p class="texto-tarjeta-precio mb-0">21,95 €</p>
-                            <p class="texto-tarjeta-iva mb-0">IVA Incluido</p>
-                        </div>
-                        <div class="chip-contenedor">
-                            <button class="chip-cesta-compra">Añadir a la cesta</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-md-3 p-2">
-                    <div class="tarjeta-de-producto">
-                        <div class="imagen-principal-tarjeta">
-                            <img src="../multimedia/img/imagen de la tarjeta.webp">
-                        </div>
-                        <div class="estrellas">
-                            <img src="../multimedia/img/Group 205.png" alt="">
-                        </div>
-                        <div>
-                            <p class="titulo-principal-tarjeta mb-0">Café arabica 100%</p>
-                            <p class="texto-tarjeta mb-0">Cafe molido arabica 100% que combina el mejor café con la fragancia y sabor únicos de la avellana, la vainilla, la canela, el chocolate y el toffee.</p>
-                            <p class="texto-tarjeta-precio mb-0">21,95 €</p>
-                            <p class="texto-tarjeta-iva mb-0">IVA Incluido</p>
-                        </div>
-                        <div class="chip-contenedor">
-                            <button class="chip-cesta-compra">Añadir a la cesta</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-md-3 p-2">
-                    <div class="tarjeta-de-producto">
-                        <div class="imagen-principal-tarjeta">
-                            <img src="../multimedia/img/cafetera-cecotec.jpg">
-                        </div>
-                        <div class="estrellas">
-                            <img src="../multimedia/img/Group 205.png" alt="">
-                        </div>
-                        <div>
-                            <p class="titulo-principal-tarjeta mb-0">Cecotec Cafetera express</p>
-                            <p class="texto-tarjeta mb-0">Espresso 20 Matic. 850 W, 20 Bares, 1,5L, Brazo Doble Salida, Vaporizador...</p>
-                            <button type="button" class="btn btn-link">Saber mas...</button>
-                            <p class="texto-tarjeta-precio mb-0">84,90 €</p>
-                            <p class="texto-tarjeta-iva mb-0">IVA Incluido</p>
-
-                        </div>
-                        <div class="chip-contenedor">
-                            <button class="chip-cesta-compra">Añadir a la cesta</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-md-3 p-2">
-                    <div class="tarjeta-de-producto">
-                        <div class="imagen-principal-tarjeta">
-                            <img src="../multimedia/img/imagen de la tarjeta.webp">
-                        </div>
-                        <div class="estrellas">
-                            <img src="../multimedia/img/Group 205.png" alt="">
-                        </div>
-                        <div>
-                            <p class="titulo-principal-tarjeta mb-0">Café arabica 100%</p>
-                            <p class="texto-tarjeta mb-0 text-wrap">Cafe molido arabica 100% que combina el mejor café con la fragancia y sabor únicos de la avellana, la vainilla, la canela, el chocolate y el toffee.</p>
+                            <p class="texto-tarjeta mb-0">Cafe molido arabica 100% que combina el mejor café con la
+                                fragancia y sabor únicos de la avellana, la vainilla, la canela, el chocolate y el
+                                toffee.</p>
                             <p class="texto-tarjeta-precio mb-0">21,95 €</p>
                             <p class="texto-tarjeta-iva mb-0">IVA Incluido</p>
 
@@ -220,8 +177,76 @@
                         </div>
                     </div>
                 </div>
-                
+                <div class=" col-12 col-md-3 p-2">
+                    <div class="tarjeta-de-producto mx-auto">
+                        <div class="imagen-principal-tarjeta">
+                            <img src="../multimedia/img/pexels-oleksandr-pidvalnyi-12955822.jpg">
+                        </div>
+                        <div class="estrellas">
+                            <img src="../multimedia/img/Group 205.png" alt="">
+                        </div>
+                        <div>
+                            <p class="titulo-principal-tarjeta mb-0">Café arabica 100%</p>
+                            <p class="texto-tarjeta mb-0">Cafe molido arabica 100% que combina el mejor café con la
+                                fragancia y sabor únicos de la avellana, la vainilla, la canela, el chocolate y el
+                                toffee.</p>
+                            <p class="texto-tarjeta-precio mb-0">21,95 €</p>
+                            <p class="texto-tarjeta-iva mb-0">IVA Incluido</p>
+
+                        </div>
+                        <div class="chip-contenedor">
+                            <button class="chip-cesta-compra">Añadir a la cesta</button>
+                        </div>
+                    </div>
+                </div>
+                <div class=" col-12 col-md-3 p-2">
+                    <div class="tarjeta-de-producto mx-auto">
+                        <div class="imagen-principal-tarjeta">
+                            <img src="../multimedia/img/pexels-oleksandr-pidvalnyi-12955822.jpg">
+                        </div>
+                        <div class="estrellas">
+                            <img src="../multimedia/img/Group 205.png" alt="">
+                        </div>
+                        <div>
+                            <p class="titulo-principal-tarjeta mb-0">Café arabica 100%</p>
+                            <p class="texto-tarjeta mb-0">Cafe molido arabica 100% que combina el mejor café con la
+                                fragancia y sabor únicos de la avellana, la vainilla, la canela, el chocolate y el
+                                toffee.</p>
+                            <p class="texto-tarjeta-precio mb-0">21,95 €</p>
+                            <p class="texto-tarjeta-iva mb-0">IVA Incluido</p>
+
+                        </div>
+                        <div class="chip-contenedor">
+                            <button class="chip-cesta-compra">Añadir a la cesta</button>
+                        </div>
+                    </div>
+                </div>
+                <div class=" col-12 col-md-3 p-2">
+                    <div class="tarjeta-de-producto mx-auto">
+                        <div class="imagen-principal-tarjeta">
+                            <img src="../multimedia/img/pexels-oleksandr-pidvalnyi-12955822.jpg">
+                        </div>
+                        <div class="estrellas">
+                            <img src="../multimedia/img/Group 205.png" alt="">
+                        </div>
+                        <div>
+                            <p class="titulo-principal-tarjeta mb-0">Café arabica 100%</p>
+                            <p class="texto-tarjeta mb-0">Cafe molido arabica 100% que combina el mejor café con la
+                                fragancia y sabor únicos de la avellana, la vainilla, la canela, el chocolate y el
+                                toffee.</p>
+                            <p class="texto-tarjeta-precio mb-0">21,95 €</p>
+                            <p class="texto-tarjeta-iva mb-0">IVA Incluido</p>
+
+                        </div>
+                        <div class="chip-contenedor">
+                            <button class="chip-cesta-compra">Añadir a la cesta</button>
+                        </div>
+                    </div>
+                </div>
+
             </div>
+        </div>
+        </div>
         </div>
         <aside></aside>
     </main>
