edicion menu y banner

--- a/pages/producto.html
+++ b/pages/producto.html
@@ -26,7 +26,8 @@
             <nav class="contenedor-nav-paginas col-12 col-md-4">
                 <div class="dropdown menu-ham-paginas">
                     <button class="btn btn-secondary dropdown-item menu-ham" type="button" data-bs-toggle="dropdown"
-                        aria-expanded="false"> <i class="icon-menu-paginas fa-solid fa-bars"></i>
+                        aria-expanded="false">
+                        <img src="../multimedia/img/menu_hambueguesa.svg">
                     </button>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="./producto.html">Productos</a></li>
@@ -199,7 +200,7 @@
                         </div>
                     </div>
                 </div>
-                <div class=" col-12 col-md-3 p-2">
+                <div class=" col-6 col-md-3 p-2">
                     <div class="tarjeta-de-producto mx-auto">
                         <div class="imagen-principal-tarjeta">
                             <img src="../multimedia/img/pexels-oleksandr-pidvalnyi-12955822.jpg">
@@ -221,7 +222,7 @@
                         </div>
                     </div>
                 </div>
-                <div class=" col-12 col-md-3 p-2">
+                <div class=" col-6 col-md-3 p-2">
                     <div class="tarjeta-de-producto mx-auto">
                         <div class="imagen-principal-tarjeta">
                             <img src="../multimedia/img/pexels-oleksandr-pidvalnyi-12955822.jpg">
